# SSRFdevil

./: .gitignore  Cargo.toml  README.md
data/: weight_user_agent.txt
data/db/rules_db/: db  snap.0000000000007D56  snap.0000000000007DF1  snap.0000000000007E09  snap.0000000000007E51  snap.0000000000008656  snap.000000000000A28C  snap.000000000000A790
data/db/targets_db/: db  snap.0000000000003DAE  snap.0000000000013167  snap.0000000000041CA1  snap.00000000000E9A6E  snap.0000000000495FC7
grammers/: ssrf.toml
rules/: 01_hex_obfuscation.yaml.bak  01_ip6_loopback.yaml  02_http_redirect.yaml  02_mixed_parser_differential.yaml.bak  03_dns_spoofing.yaml  03_ipv6_rare_address.yaml.bak  04_ipv4_mapped_ipv6_localhost.yaml  05_standard_hex_obfuscation.yaml  06_rare_ip6_compressed.yaml  07_mixed_encoding_parser.yaml  08_decimal_ip.yaml  09_octal_ip.yaml  10_hex_single_number.yaml  11_ip_with_zero_octet.yaml  12_bypass_at_sign.yaml  13_bypass_slash.yaml  14_bypass_dot_utf8.yaml  15_aws_metadata.yaml  16_aws_metadata_iam.yaml  17_gcp_metadata.yaml  18_azure_metadata.yaml  19_nginx_localhost_alias.yaml  20_sslip_io.yaml  21_nip_io.yaml  22_localhost_me.yaml  23_192_168_0_1.yaml  24_10_0_0_1.yaml  25_file_etc_passwd.yaml  26_file_win_ini.yaml  27_dict_memcached.yaml  28_gopher_redis.yaml  29_ftp_internal.yaml  30_unknown_host_header.yaml
src/: config.rs  console.rs  executor.rs  lib.rs  main.rs  paths.rs  rule.rs  rule_mgr.rs  scanner.rs  state.rs
src/crawler/: crawler.rs  crawler_config.rs  crawler_targets.rs  mod.rs
src/engine/: cookie_engine.rs  delay_engine.rs  header_engine.rs  mod.rs  proxy_engine.rs  request.rs  request_engine.rs  response.rs  rule.rs  rule_engine.rs  trace_engine.rs  ua_engine.rs
src/lua_engine/: executor.rs  matcher.rs  mod.rs
