[package]
name = "ssrfdevil"
version = "0.1.0"
edition = "2021"
default-run = "ssrfdevil"
authors = ["redparrot",]

[dependencies]
chrono = "0.4"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
#colored = "2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rand = "0.10.1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
#lonkero = "3.6.6" 
#attackstr = "0.2.0"
#wafrift-oracle = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sled = "0.34.7"
url = "2.5.8"
