[package]
name = "ssrfdevil"
version = "0.1.0"
edition = "2021"
default-run = "ssrfdevil"
authors = ["redparrot",]

[dependencies]
chrono = "0.4"
crossterm = "0.27"
encoding_rs = "0.8"
futures = "0.3"
indicatif = "0.17"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
tokio = { version = "1", features = ["full"] }
rand = "0.9.0"
#rand = { version = "0.10.1", features = ["std"] }
regex = "1.13.0"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls"] }
#lonkero = "3.6.6" 
#attackstr = "0.2.0"
#wafrift-oracle = "0.2.15"
scopeguard = "1.2"
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sled = "0.34.7"
terminal-menu = "3.1.0"
url = { version = "2.5.8", features = ["serde"] }
